<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_author"
                android:hint="@string/hint_product_author"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_cover"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_cover"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/padding16"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/unit_product_price"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quantity_decrement"
                android:layout_width="80dp"
                android:layout_height="wrap_content"

                android:text="@string/decrease_quantity_button" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:gravity="center"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:text="@string/_0" />

            <Button
                android:id="@+id/quantity_increment"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/increase_quantity_button" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_product_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_supplier_phone_number"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:background="@color/button"
        android:text="@string/order_button" />
</LinearLayout>
